--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -4,5 +4,5 @@ jobs:
   hello-job:
     runs-on: ubuntu-latest
     steps:
-      - name: Echo text
+      - name: Echo text local system
         run: 'echo "Hello, world!"'
