--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -5,4 +5,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Echo text local system
-        run: 'echo "Hello, world!"'
+        run: 'echo "Hello, world! Kubuntu"'
