changes with vs-code

--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -5,4 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Echo text local system
-        run: 'echo "Hello, world! Kubuntu"'
+        run: |
+          echo "Hello, world! From Kubuntu"'
+          ls -la
