--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -6,5 +6,5 @@ jobs:
     steps:
       - name: Echo text local system
         run: |
-          echo "Hello, world! From Kubuntu"'
+          echo "Hello, world! From Kubuntu"
           ls -la
